Add django-angular dependency and configuration.

--- a/Pipfile
+++ b/Pipfile
@@ -6,3 +6,5 @@ url = "https://pypi.python.org/simple"
 django = "*"
 djangorestframework = "*"
 django-filter = "*"
+django-angular = "*"
+whitenoise = "*"
