--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.0",
+    "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "popper.js": "^1.12.3",
+    "pump": "^1.0.2",
     "tempusdominus-bootstrap-4": "^5.0.0-alpha9"
   }
 }
