--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.18.1",
     "popper.js": "^1.12.3",
     "pump": "^1.0.2",
+    "require-dir": "^0.3.2",
     "tempusdominus-bootstrap-4": "^5.0.0-alpha9"
   }
 }
