--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-csso": "^3.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
