--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
     "gulp-sass-lint": "^1.3.2",
+    "gulp-spawn": "^0.4.0",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
