Create a sleep times graph (WIP).
Adding a Pandas requirement for dealing with the data and separating graph processing in to a separate file.

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ djangorestframework = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
 plotly = "*"
+pandas = "*"
 
 [dev-packages]
 faker = "*"
