--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "description": "Baby activities tracker application.",
   "version": "0.1.0",
   "devDependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.0.0-beta.2",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
-    "gulp-sass-lint": "^1.3.2",
+    "gulp-sass-lint": "^1.3.4",
     "gulp-spawn": "^0.4.0",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
-    "moment": "^2.18.1",
-    "plotly.js": "^1.30.0",
-    "popper.js": "^1.12.3",
+    "moment": "^2.19.1",
+    "plotly.js": "^1.31.1",
+    "popper.js": "^1.12.5",
     "pump": "^1.0.2",
     "require-dir": "^0.3.2",
     "tempusdominus-bootstrap-4": "^5.0.0-alpha9"
