Rename project Baby Buddy.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babyblotter",
+  "name": "babybuddy",
   "description": "Baby activities tracker application.",
   "version": "0.1.0",
   "devDependencies": {
