--- a/Pipfile
+++ b/Pipfile
@@ -2,11 +2,6 @@
 verify_ssl = true
 url = "https://pypi.python.org/simple"
 
-[dev-packages]
-coveralls = "*"
-faker = "*"
-flake8 = "*"
-
 [packages]
 django = "*"
 djangorestframework = "*"
@@ -14,3 +9,9 @@ django-filter = "*"
 django-widget-tweaks = "*"
 plotly = "*"
 pandas = "*"
+
+[dev-packages]
+coveralls = "*"
+faker = "*"
+flake8 = "*"
+ipaddress = "*"
