Refactor gulp commands and travis config for whitenoise integration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
 before_script:
     - gulp lint
     - gulp build
+    - gulp collectstatic
 script:
     - gulp coverage
 after_success:
