Use visibilityjs and momentjs to update a running timer when it's detail page becomes visible.
This commit is intended to improve the mobile experience by updating the timer detail page with the correct, current duration when, for example, a phone is unlocked after having been locked for a while with the timer detail page open.

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "pump": "^1.0.2",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
-    "tempusdominus-bootstrap-4": "^5.0.0-alpha9"
+    "tempusdominus-bootstrap-4": "^5.0.0-alpha9",
+    "visibilityjs": "^1.2.5"
   },
   "scripts": {
     "heroku-postbuild": "npm rebuild node-sass && gulp build"
