Update docker-compose config using an environment file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   db:
     image: postgres
   web:
+    env_file: docker.env
     build: .
     command: gunicorn -c /app/gunicorn.py babybuddy.wsgi
     ports:
