--- a/.ebextensions/babybuddy.config
+++ b/.ebextensions/babybuddy.config
@@ -28,7 +28,7 @@ container_commands:
     env:
       LC_ALL: en_US.utf8
       LANG: en_US.utf8
-    command: 'pipenv lock -r | pip install -r /dev/stdin'
+    command: 'pipenv --system --deploy'
   03_npm_install:
     command: 'npm install'
   04_gulp_build:
