Add environment variable-based settings and configuration documentation.

--- a/docker.env.example
+++ b/docker.env.example
@@ -1,3 +1,5 @@
+# See README.md#configuration for other configuration options.
+
 ALLOWED_HOSTS=
 DEBUG=False
 DJANGO_SETTINGS_MODULE=babybuddy.settings.docker
