--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ djangorestframework = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
 plotly = "*"
-pandas = "*"
+pandas = "<0.21.0"
 faker = "*"
 dj-database-url = "*"
 gunicorn = "*"
