--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ url = "https://pypi.python.org/simple"
 
 [packages]
 
-django = "<2.0"
+django = "*"
 djangorestframework = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
