Update npm dependencies.

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "gulp-spawn": "^0.4.0",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
-    "moment": "^2.19.3",
+    "moment": "^2.19.4",
     "plotly.js": "^1.31.2",
     "popper.js": "^1.13.0",
-    "pump": "^1.0.3",
+    "pump": "^2.0.0",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.0",
-    "tempusdominus-bootstrap-4": "^5.0.0-alpha9",
+    "tempusdominus-bootstrap-4": "latest",
     "visibilityjs": "^1.2.6"
   },
   "scripts": {
