--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "url": "https://github.com/cdubz/babybuddy.git"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0-beta.3",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-csso": "^3.0.0",
-    "gulp-flatten": "^0.3.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-flatten": "^0.4.0",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
     "gulp-sass-lint": "^1.3.4",
@@ -20,12 +20,12 @@
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "moment": "^2.20.1",
-    "plotly.js": "^1.31.2",
+    "plotly.js": "^1.32.0",
     "popper.js": "^1.13.0",
     "pump": "^2.0.0",
     "require-dir": "^0.3.2",
-    "run-sequence": "^2.2.0",
-    "tempusdominus-bootstrap-4": "latest",
+    "run-sequence": "^2.2.1",
+    "tempusdominus-bootstrap-4": "^5.0.0-alpha14",
     "visibilityjs": "^1.2.6"
   },
   "scripts": {
