--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/cdubz/babybuddy.git"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
@@ -18,14 +18,14 @@
     "gulp-sass-lint": "^1.3.4",
     "gulp-spawn": "^0.4.0",
     "gulp-uglify": "^3.0.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "moment": "^2.20.1",
-    "plotly.js": "^1.32.0",
+    "plotly.js": "^1.33.0",
     "popper.js": "^1.13.0",
-    "pump": "^2.0.0",
+    "pump": "^2.0.1",
     "require-dir": "^0.3.2",
     "run-sequence": "^2.2.1",
-    "tempusdominus-bootstrap-4": "^5.0.0-alpha14",
+    "tempusdominus-bootstrap-4": "^5.0.0-alpha15",
     "visibilityjs": "^1.2.6"
   },
   "scripts": {
