Add support for AWS S3 storage for ephemeral storage platforms

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,8 @@ whitenoise = "*"
 "psycopg2" = "*"
 easy-thumbnails = "*"
 python-dotenv = "*"
+django-storages = "*"
+"boto3" = "*"
 
 
 [dev-packages]
