--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pump": "^3.0.0",
     "require-dir": "^1.0.0",
     "run-sequence": "^2.2.1",
-    "tempusdominus-bootstrap-4": "^5.0.0-alpha9",
+    "tempusdominus-core": "latest",
+    "tempusdominus-bootstrap-4": "latest",
     "visibilityjs": "^1.2.7"
   },
   "scripts": {
