--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
     "url": "https://github.com/cdubz/babybuddy.git"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
+    "bootstrap": "4.0.0",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
     "gulp-flatten": "^0.4.0",
-    "gulp-sass": "^3.2.0",
-    "gulp-sass-glob": "^1.0.8",
+    "gulp-sass": "^4.0.1",
+    "gulp-sass-glob": "^1.0.9",
     "gulp-sass-lint": "^1.3.4",
     "gulp-spawn": "^0.4.0",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.3.1",
-    "moment": "^2.21.0",
-    "plotly.js": "^1.35.2",
-    "popper.js": "^1.14.1",
+    "moment": "^2.22.1",
+    "plotly.js": "^1.37.1",
+    "popper.js": "^1.14.3",
     "pump": "^3.0.0",
     "require-dir": "^1.0.0",
     "run-sequence": "^2.2.1",
