Remove pandas version lock and drop Python 3.4 support.
Pandas was locked because of build issues for Python 3.4 and other build requirments do not offer PyPI wheels for 3.4 any more.

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ djangorestframework = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
 plotly = "*"
-pandas = "<0.22.0"
+pandas = "*"
 faker = "*"
 dj-database-url = "*"
 gunicorn = "*"
