--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/cdubz/babybuddy.git"
   },
-  "dependencies": {
+  "devDependencies": {
     "bootstrap": "4.1.3",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.0",
