--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "bootstrap": "4.1.3",
+    "del": "^3.0.0",
     "font-awesome": "^4.7.0",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
