--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ url = "https://pypi.python.org/simple"
 
 [packages]
 
-django = ">2.1.1"
+django = ">=2.2.2"
 djangorestframework = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
