A couple minor changes
- Added support for persisting static content using the advice from https://github.com/cdubz/babybuddy/issues/46#issuecomment-394020997. Thanks @djmwj !
- Fixed a couple yamllint warning messages.
- Set some values explicitly to match `docker-compose config`.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,25 @@
+---
 version: "2"
 
 services:
   db:
     image: postgres
     environment:
-       - PGDATA=/db-data
+      - PGDATA=/db-data
     volumes:
-       - db:/db-data
+      - db:/db-data:rw
   app:
     image: cdubzzz/babybuddy
-    env_file: 
+    env_file:
       - docker.env
     command: gunicorn -c /app/gunicorn.py babybuddy.wsgi
     ports:
       - "8000:8000"
     depends_on:
       - db
+    volumes:
+      - baby_data:/app:rw
 
 volumes:
-   db:
+  db: {}
+  baby_data: {}
