--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - PGDATA=/db-data
     volumes:
-      - db_data:/db-data:rw
+      - db:/db-data:rw
   app:
     image: cdubzzz/babybuddy
     env_file:
@@ -18,8 +18,8 @@ services:
     depends_on:
       - db
     volumes:
-      - app_data:/app:rw
+      - app:/app:rw
 
 volumes:
-  app_data: {}
-  db_data: {}
+  app: {}
+  db: {}
