--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "gulp-flatten": "^0.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.1.0",
-    "gulp-sass-lint": "^1.4.0",
     "gulp-spawn": "^0.4.4",
+    "gulp-stylelint": "^10.0.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "plotly.js": "^1.51.1",
     "popper.js": "^1.16.0",
     "pump": "^3.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.12.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
     "tempusdominus-core": "^5.0.3"
-  }
+  },
+  "dependencies": {}
 }
