--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ url = "https://pypi.python.org/simple"
 
 [packages]
 
-django = ">=2.2.4"
+django = ">=2.2.8,<3.0"
 djangorestframework = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
