Set specific jobs for Travis CI generic build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,14 @@ cache:
     pip: true
     directories:
         - node_modules
-python:
-    - 3.6
-    - 3.7
-    - 3.8
+jobs:
+  include:
+    - name: "Python 3.6"
+      python: 3.6
+    - name: "Python 3.7"
+      python: 3.7
+    - name: "Python 3.8"
+      python: 3.8
 env:
     - DJANGO_SETTINGS_MODULE="babybuddy.settings.travis"
 install:
