--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,18 @@ cache:
 jobs:
   include:
     - name: "Python 3.6"
-      env: PYTHON=3.6.9
+      env: PYENV_VERSION=3.6.9
     - name: "Python 3.7"
-      env: PYTHON=3.7.5
+      env: PYENV_VERSION=3.7.5
     - name: "Python 3.8"
-      env: PYTHON=3.8.0
+      env: PYENV_VERSION=3.8.0
 env:
     - DJANGO_SETTINGS_MODULE="babybuddy.settings.travis"
+addons:
+    apt:
+        packages:
+            - python3
+            - python3-pip
 install:
     - nvm use 10
     - npm install -g gulp-cli && npm install
