--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,17 @@ cache:
 jobs:
   include:
     - name: "Python 3.6"
-      env: PYENV_VERSION=3.6.9
+      before_install:
+          - pyenv install 3.6.9
+          - pyenv global 3.6.9
     - name: "Python 3.7"
-      env: PYENV_VERSION=3.7.5
+      before_install:
+          - pyenv install 3.7.5
+          - pyenv global 3.7.5
     - name: "Python 3.8"
-      env: PYENV_VERSION=3.8.0
+      before_install:
+          - pyenv install 3.8.0
+          - pyenv global 3.8.0
 env:
     - DJANGO_SETTINGS_MODULE="babybuddy.settings.travis"
 addons:
