--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+os: linux
 language: generic
 dist: bionic
 jobs:
@@ -19,8 +20,10 @@ env:
   - DJANGO_SETTINGS_MODULE="babybuddy.settings.travis"
 install:
   - nvm use 10
-  - npm install -g gulp-cli && npm install
-  - pip install pipenv && pipenv install --dev
+  - npm install -g gulp-cli
+  - npm install
+  - pip install pipenv
+  - pipenv install --dev
 before_script:
   - gulp lint
 script:
