Add `createcachetable` to deploy configurations

--- a/.ebextensions/babybuddy.config
+++ b/.ebextensions/babybuddy.config
@@ -10,13 +10,14 @@ option_settings:
 container_commands:
   01_pipenv_install:
     command: 'pip install pipenv'
-  02_requirments_install:
+  02_requirements_install:
     env:
       LC_ALL: en_US.utf8
       LANG: en_US.utf8
     command: 'pipenv install --system --deploy'
-  03_collectstatic:
-    command: 'python manage.py collectstatic --no-input'
-  04_migrate:
+  03_migrate:
     command: "python manage.py migrate"
+    leader_only: true
+  04_createcachetable:
+    command: "python manage.py createcachetable"
     leader_only: true
