--- a/app.json
+++ b/app.json
@@ -37,6 +37,6 @@
         }
     },
     "scripts": {
-        "postdeploy": "python manage.py migrate"
+        "postdeploy": "python manage.py migrate && python manage.py createcachetable"
     }
 }
