Add `TIME_ZONE` configuration to EB documentation

--- a/.ebextensions/babybuddy.config
+++ b/.ebextensions/babybuddy.config
@@ -2,6 +2,7 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: babybuddy.settings.eb
     SECRET_KEY: CHANGETOSOMETHINGRANDOM
+    TIME_ZONE: Etc/UTC
   aws:elasticbeanstalk:container:python:staticfiles:
     '/static/': 'static/'
   aws:elasticbeanstalk:container:python:
