--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.24.0",
     "plotly.js": "^1.52.1",
     "popper.js": "^1.16.1",
+    "pulltorefreshjs": "^0.1.20",
     "pump": "^3.0.0",
     "stylelint": "^13.0.0",
     "stylelint-config-recommended-scss": "^4.1.0",
