Update Docker Hub repo (#112)

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - db:/db-data:rw
   app:
-    image: cdubzzz/babybuddy
+    image: babybuddy/babybuddy
     # See README.md#configuration for other environment configuration options.
     environment:
       - ALLOWED_HOSTS=
