Add OpenAPI support dependencies (#147)

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,8 @@ python-dotenv = "*"
 django-storages = "*"
 boto3 = "*"
 django-import-export = "*"
+pyyaml = "*"
+uritemplate = "*"
 
 [dev-packages]
 coveralls = "*"
