--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 os: linux
 language: generic
-dist: bionic
+dist: focal
 jobs:
   include:
     - name: "Python 3.6"
@@ -19,7 +19,7 @@ cache:
 env:
   - DJANGO_SETTINGS_MODULE="babybuddy.settings.travis"
 install:
-  - nvm use 10
+  - nvm use 12
   - npm install -g gulp-cli
   - npm install
   - pip install pipenv
