--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ jobs:
   include:
     - name: "Python 3.6"
       before_install:
+        - pyenv versions
+        - pyenv install --list
         - pyenv global 3.6.10
     - name: "Python 3.7"
       before_install:
