--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ jobs:
   include:
     - name: "Python 3.6"
       before_install:
-        - pyenv update
+        - unset PYENV_ROOT
+        - curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash
+        - export PATH="$HOME/.pyenv/bin:$PATH"
         - pyenv versions
         - pyenv install --list
+        - pyenv install 3.6.10
         - pyenv global 3.6.10
     - name: "Python 3.7"
       before_install:
