--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,13 @@ jobs:
   include:
     - name: "Python 3.6"
       before_install:
-        - pyenv versions
-        - pyenv global 3.6.10
-        - pyenv versions
+        - pyenv global `pyenv versions | tr -d "[:blank:]" | grep -Po "3\.6\.[\d]+" | tail -1`
     - name: "Python 3.7"
       before_install:
-        - pyenv global 3.7.6
+        - pyenv global `pyenv versions | tr -d "[:blank:]" | grep -Po "3\.7\.[\d]+" | tail -1`
     - name: "Python 3.8"
       before_install:
-        - pyenv global 3.8.1
+        - pyenv global `pyenv versions | tr -d "[:blank:]" | grep -Po "3\.8\.[\d]+" | tail -1`
 cache:
   directories:
     - $HOME/.cache/pip
@@ -21,11 +19,11 @@ cache:
 env:
   - DJANGO_SETTINGS_MODULE="babybuddy.settings.travis"
 install:
-  - nvm use 12
+  - nvm use 10
   - npm install -g gulp-cli
   - npm install
   - pip install pipenv
-  - pipenv install --dev
+  - pipenv --python `pyenv which python` install --dev
 before_script:
   - gulp lint
 script:
