Stop committing Pipfile.lock
Pipenv is designed to pin to a specific version of Python. Including the lock
file can lead to failed builds or broken package configurations on different
system architectures and/or Python versions.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@ docker-compose.yml
 
 # Django media root directory.
 /media
+
+# Pipfile.lock.
+# Committing this file makes it difficult to support multiple Python versions as
+# requirements can different between versions, but the Pipfile only supports
+# locking to one version.
+Pipfile.lock
