--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ gunicorn==20.0.4
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 ipaddress==1.0.23
 jdcal==1.4.1
-jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
 markuppy==1.14
 mccabe==0.6.1
 odfpy==1.4.1
@@ -34,14 +34,14 @@ plotly==4.13.0
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pyflakes==2.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 python-dotenv==0.15.0
 pytz==2020.4
 pyyaml==5.3.1
 requests==2.25.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 retrying==1.3.3
 s3transfer==0.3.3
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 sqlparse==0.4.1; python_version >= '3.5'
 tablib[html,ods,xls,xlsx,yaml]==2.0.0; python_version >= '3.5'
 text-unidecode==1.3
