Lock requirements before deploy (AWS EB)

--- a/.ebextensions/babybuddy.config
+++ b/.ebextensions/babybuddy.config
@@ -11,14 +11,19 @@ option_settings:
 container_commands:
   01_pipenv_install:
     command: 'pip install pipenv'
-  02_requirements_install:
+  03_requirements_lock:
+    env:
+      LC_ALL: en_US.utf8
+      LANG: en_US.utf8
+    command: 'pipenv lock'
+  03_requirements_install:
     env:
       LC_ALL: en_US.utf8
       LANG: en_US.utf8
     command: 'pipenv install --system --deploy'
-  03_migrate:
+  04_migrate:
     command: "python manage.py migrate"
     leader_only: true
-  04_createcachetable:
+  05_createcachetable:
     command: "python manage.py createcachetable"
     leader_only: true
