--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -15,23 +15,21 @@ services:
     image: babybuddy/babybuddy
     # Container_name is an optional value for single-container deployments to set a friendly container name.
     # Disable in swarm or other multi-container setups.
-    container_name: babybuddy
+    container_name: babybuddyapp
     # See README.md#configuration for other environment configuration options.
     environment:
-      - ALLOWED_HOSTS=localhost   # comma separated list of IP addresses or hosts that can access the web UI
+      - ALLOWED_HOSTS=localhost    # comma separated list of IP addresses or hosts that can access the web UI
       - DJANGO_SETTINGS_MODULE=babybuddy.settings.docker
-      - SECRET_KEY=               # Generate a random string here to secure the Django instance
-      - TIME_ZONE=                # In the tzdata format, IE, "America/Denver"
+      - SECRET_KEY=                # Generate a random string here to secure the Django instance
+      - TIME_ZONE=                 # In the tzdata format, IE, "America/Denver"
       - POSTGRES_PASSWORD=postgres # has to correspond with DB_PASSWORD in DB
-      - DEBUG=False               # Turn to False in production
+      - DEBUG=False                # Turn to False in production
     volumes:
       - media:/app/media:rw
     # Sleep 5 seconds to allow the db to to come up;
     command: bash -c 'sleep 5 && python manage.py migrate --noinput && python manage.py createcachetable && gunicorn babybuddy.wsgi -b :8000 --log-level=info'
     ports:
-      - "8000:8000"
-    # For Portainer deployment, select an alternate port for babybuddy, such as port 7000
-    # - "7000:8000"
+      - "8000:8000" # For Portainer, select an alternate port for babybuddy, such as 7000, for example "7000:8000"
     restart: unless-stopped
     depends_on:
       - db
