Add support for authentication based on LDAP or REMOTE_USER header

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ django = "*"
 djangorestframework = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
+django-auth-ldap = "*"
 plotly = "*"
 faker = "*"
 dj-database-url = "*"
@@ -15,6 +16,7 @@ whitenoise = "*"
 psycopg2-binary = "*"
 easy-thumbnails = "*"
 python-dotenv = "*"
+python-ldap = ">3.1"
 django-storages = "*"
 boto3 = "*"
 django-import-export = "*"
