Set default timezone as UTC
The previous setting of "Etc/UTC" appears to no longer be valid in certain
circumstances. This was causes tests to fail on user settings because the
provided default was invalid. "UTC" should be more uniformly recognized so
hopefully this does not have any downstream effects.

Closes #203

--- a/app.json
+++ b/app.json
@@ -33,7 +33,7 @@
         },
         "TIME_ZONE": {
             "description": "Sets the instance default time zone.",
-            "value": "Etc/UTC"
+            "value": "UTC"
         }
     },
     "scripts": {
