--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-on: ["push", "pull_request"]
+on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -38,17 +38,17 @@ jobs:
       - run: gulp lint
       - run: gulp coverage
       - name: Submit results to Coveralls
-        uses: coverallsapp/github-action@master
+        uses: AndreMiras/coveralls-python-action@develop
         with:
           github-token: ${{ secrets.github_token }}
           flag-name: run-${{ matrix.python-version }}
           parallel: true
-  finish:
+  coveralls_finish:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Coveralls Finished
-        uses: coverallsapp/github-action@master
+        uses: AndreMiras/coveralls-python-action@develop
         with:
           github-token: ${{ secrets.github_token }}
           parallel-finished: true
