--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,11 @@
 name: CI
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -41,7 +47,7 @@ jobs:
         uses: AndreMiras/coveralls-python-action@develop
         with:
           github-token: ${{ secrets.github_token }}
-          flag-name: run-${{ matrix.python-version }}
+          flag-name: test-python-${{ matrix.python-version }}
           parallel: true
   coveralls_finish:
     needs: test
