--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -i https://pypi.python.org/simple
 asgiref==3.3.4; python_version >= '3.6'
-boto3==1.17.49
-botocore==1.20.49; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+boto3==1.17.89
+botocore==1.20.89; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20200713; python_version >= '2.7'
 dj-database-url==0.5.0
@@ -9,11 +9,11 @@ django-filter==2.4.0
 django-import-export==2.5.0
 django-storages==1.11.1
 django-widget-tweaks==1.4.8
-django==3.2
+django==3.2.4
 djangorestframework==3.12.4
 easy-thumbnails==2.7.1
-et-xmlfile==1.0.1
-faker==8.0.0
+et-xmlfile==1.1.0; python_version >= '3.6'
+faker==8.6.0
 gunicorn==20.1.0
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 markuppy==1.14
@@ -23,18 +23,17 @@ pillow==8.2.0; python_version >= '3.6'
 plotly==4.14.3
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==0.17.0
+python-dotenv==0.17.1
 pytz==2021.1
 pyyaml==5.4.1
 retrying==1.3.3
-s3transfer==0.3.6
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+s3transfer==0.4.2
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.1; python_version >= '3.5'
 tablib[html,ods,xls,xlsx,yaml]==3.0.0; python_version >= '3.6'
 text-unidecode==1.3
-typing-extensions==3.7.4.3; python_version < '3.8'
 uritemplate==3.0.1
-urllib3==1.26.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 whitenoise==5.2.0
 xlrd==2.0.1
 xlwt==1.3.0
