Add basic log in brute force protection

--- a/Pipfile
+++ b/Pipfile
@@ -3,23 +3,24 @@ verify_ssl = true
 url = "https://pypi.python.org/simple"
 
 [packages]
-django = "*"
-djangorestframework = "*"
-django-filter = "*"
-django-widget-tweaks = "*"
-plotly = "*"
-faker = "*"
-dj-database-url = "*"
-gunicorn = "*"
-whitenoise = "*"
-psycopg2-binary = "*"
-easy-thumbnails = "*"
-python-dotenv = "*"
-django-storages = "*"
 boto3 = "*"
+dj-database-url = "*"
+django = "*"
+django-axes = "*"
+django-filter = "*"
 django-import-export = "*"
+django-storages = "*"
+django-widget-tweaks = "*"
+djangorestframework = "*"
+easy-thumbnails = "*"
+faker = "*"
+gunicorn = "*"
+plotly = "*"
+psycopg2-binary = "*"
+python-dotenv = "*"
 pyyaml = "*"
 uritemplate = "*"
+whitenoise = "*"
 
 [dev-packages]
 coveralls = "*"
