--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,38 @@
 -i https://pypi.python.org/simple
 asgiref==3.3.4; python_version >= '3.6'
-boto3==1.17.89
-botocore==1.20.89; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+boto3==1.17.98
+botocore==1.20.98; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20200713; python_version >= '2.7'
 dj-database-url==0.5.0
+django-axes==5.19.0
 django-filter==2.4.0
 django-import-export==2.5.0
+django-ipware==3.0.2
 django-storages==1.11.1
 django-widget-tweaks==1.4.8
 django==3.2.4
 djangorestframework==3.12.4
 easy-thumbnails==2.7.1
 et-xmlfile==1.1.0; python_version >= '3.6'
-faker==8.6.0
+faker==8.8.1
 gunicorn==20.1.0
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.0.7
 pillow==8.2.0; python_version >= '3.6'
-plotly==4.14.3
-psycopg2-binary==2.8.6
+plotly==5.0.0
+psycopg2-binary==2.9.1
 python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==0.17.1
+python-dotenv==0.18.0
 pytz==2021.1
 pyyaml==5.4.1
-retrying==1.3.3
 s3transfer==0.4.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.1; python_version >= '3.5'
 tablib[html,ods,xls,xlsx,yaml]==3.0.0; python_version >= '3.6'
+tenacity==7.0.0
 text-unidecode==1.3
 uritemplate==3.0.1
 urllib3==1.26.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
