--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -27,7 +27,12 @@ services:
     volumes:
       - media:/app/media:rw
     # Sleep 5 seconds to allow the db to to come up;
-    command: bash -c 'sleep 5 && python manage.py migrate --noinput && python manage.py createcachetable && gunicorn babybuddy.wsgi -b :8000 --log-level=info'
+    command: |-
+      bash -c 'python manage.py migrate --noinput &&
+        python manage.py createcachetable &&
+        gunicorn babybuddy.wsgi -b :8000 --log-level=info \
+          --worker-tmp-dir=/dev/shm --log-file=- \
+          --workers=2 --threads=4 --worker-class=gthread'
     ports:
       - "8000:8000"               # For Portainer, select another port for babybuddy such as 7000, for example "7000:8000"
     restart: unless-stopped
