--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
     "gulp-flatten": "^0.4.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.0.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-spawn": "^1.0.0",
     "gulp-stylelint": "^13.0.0",
@@ -22,14 +22,15 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "plotly.js": "^2.0.0",
+    "plotly.js": "^2.2.1",
     "popper.js": "^1.16.1",
     "pulltorefreshjs": "^0.1.22",
     "pump": "^3.0.0",
+    "sass": "^1.35.2",
     "stylelint": "^13.13.1",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-recommended-scss": "^4.3.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0",
+    "stylelint-scss": "^3.20.1",
     "tempusdominus-bootstrap-4": "5.1.2",
     "tempusdominus-core": "5.0.3"
   }
