Fix activities icon spelling

--- a/babybuddy/static_src/fontello/config.json
+++ b/babybuddy/static_src/fontello/config.json
@@ -14,7 +14,7 @@
     },
     {
       "uid": "af95ef0ddda80a78828c62d386506433",
-      "css": "activites",
+      "css": "activities",
       "code": 61875,
       "src": "fontawesome"
     },
