Fix refresh icon name

--- a/babybuddy/static_src/fontello/config.json
+++ b/babybuddy/static_src/fontello/config.json
@@ -110,7 +110,7 @@
     },
     {
       "uid": "a73c5deb486c8d66249811642e5d719a",
-      "css": "arrows-cw",
+      "css": "refresh",
       "code": 59401,
       "src": "fontawesome"
     },
