--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DJANGO_SETTINGS_MODULE: babybuddy.settings.ci
+      PIPENV_VENV_IN_PROJECT: enabled
     strategy:
       max-parallel: 4
       matrix:
@@ -29,18 +30,18 @@ jobs:
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
-#      - name: Cache Python dependencies
-#        id: cache-pipenv
-#        uses: actions/cache@v2
-#        with:
-#          path: ~/.local/share/virtualenvs
-#          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
-#          restore-keys: |
-#            ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-
+      - name: Cache Python dependencies
+        id: cache-pipenv
+        uses: actions/cache@v2
+        with:
+          path: ./.venv
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
-          pipenv install --deploy --dev
+          pipenv install --dev --verbose
       - run: gulp lint
       - run: gulp coverage
       - name: Submit results to Coveralls
